Added more static pages

--- a/frontend/vanilla-ui/styles/general.css
+++ b/frontend/vanilla-ui/styles/general.css
@@ -9,6 +9,7 @@
     --white: #FFF;
     --light-grey: #FDFDFD;
     --grey: #F5F5F5;
+    --mid-grey: #F2F2F2;
     --dark-blue:#2C2B3C;
     --black: #000;
 }
