--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,95 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
+
+* {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+}
+
+:root {
+  --blue: #3c68ff;
+  --white: #fff;
+  --light-grey: #fdfdfd;
+  --grey: #f5f5f5;
+  --dark-blue: #2c2b3c;
+  --black: #000;
+}
+
+body {
+  overflow-y: scroll;
+  margin: 0;
+  padding: 12px 24px 100px 24px;
+  background-color: var(--light-grey);
+}
+
+.max-width {
+  max-width: 1920px;
+}
+
+h1 {
+  color: var(--black);
+  margin: 0;
+  font-size: 60px;
+}
+
+h2 {
+  color: var(--black);
+  margin: 0;
+  font-size: 30px;
+}
+
+h3 {
+  color: var(--black);
+  margin: 0;
+  font-size: 24px;
+}
+
+h4 {
+  color: var(--black);
+  margin: 0;
+  font-size: 18px;
+}
+
+h5 {
+  color: var(--black);
+  margin: 0;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+p {
+  color: var(--black);
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+a:link,
+a:visited,
+a:active {
+  cursor: pointer;
+  color: var(--black);
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+a:hover {
+  outline: none;
+  color: var(--dark-blue);
+}
+
+a:focus-visible {
+  outline: 2px solid var(--blue);
 }
