--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
 
 * {
@@ -23,6 +9,7 @@ code {
   --white: #fff;
   --light-grey: #fdfdfd;
   --grey: #f5f5f5;
+  --mid-grey: #f2f2f2;
   --dark-blue: #2c2b3c;
   --black: #000;
 }
@@ -92,4 +79,103 @@ a:hover {
 
 a:focus-visible {
   outline: 2px solid var(--blue);
+}
+
+.primary-btn {
+  font-size: 16px;
+  color: #fff;
+  background-color: var(--blue);
+  padding: 10px 20px;
+  width: 280px;
+  border-radius: 50px;
+  border: solid 1px transparent;
+  transition: background-color 0.3s, box-shadow 0.2s;
+}
+
+.primary-btn:hover {
+  cursor: pointer;
+  background-color: rgb(26, 115, 232, 0.95);
+}
+
+.primary-btn:focus-visible {
+  border: solid 1px #1A73E8;
+  box-shadow: 0 0 0 2px rgba(39, 94, 254, .3);
+  outline: none;
+}
+
+.primary-btn:disabled {
+  color: rgb(44, 43, 60, 0.4);
+  background-color: rgb(44, 43, 60, 0.03);
+}
+
+.primary-btn:disabled:hover {
+  cursor: not-allowed;
+  background-color: rgb(44, 43, 60, 0.03);
+}
+
+
+.input-label {
+  color: #59586A;
+  font-size: 16px;
+  padding-bottom: 10px;
+  display: block;
+  width: 100%;
+}
+
+.input {
+  box-sizing: border-box;
+  caret-color: hsl(0, 0%, 0%, 0.5);
+  background: var(--white);
+  border: solid 1px hsl(0, 0%, 0%, 0.2);
+  border-radius: 6px;
+  color: hsl(0, 0%, 0%, 0.5);
+  font-size: 16px;
+  font-weight: 500;
+  padding: 14px 16px;
+  width: 100%;
+  transition: border 0.2s, box-shadow 0.2s;
+}
+
+.input:hover {
+  border: solid 1px #1A73E8;
+}
+
+.input:focus-visible {
+  outline: none;
+  border: solid 1px #1A73E8;
+  box-shadow: 0 0 0 2px rgba(39, 94, 254, .3);
+}
+
+.input:invalid {
+  border: solid 1px rgb(232, 26, 26);
+}
+
+.input:invalid:focus {
+  box-shadow: 0 0 0 2px rgba(232, 39, 39, 0.3);
+}
+
+.dialog {
+  margin: 50px auto;
+  background-color: var(--mid-grey);
+  border-radius: 20px;
+  padding: 40px 24px;
+  max-width: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+}
+
+.dialog div {
+  width: 100%;
+}
+
+.dialog button {
+  margin-bottom: 20px;
+}
+
+.dialog h3 {
+  text-align: left;
+  margin-bottom: 20px;
 }
