--- a/frontend/vanilla-ui/general.css
+++ b/frontend/vanilla-ui/general.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: 'Inter', Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 :root {
@@ -14,15 +15,21 @@
     --black: #000;
 }
 
+html {
+    height: 100%;
+}
+
 body {
-    overflow-y: scroll;
+    height: 100%;
     margin: 0;
-    padding: 12px 24px 100px 24px;
+    padding: 0;
     background-color: var(--light-grey);
 }
 
 .max-width {
+    overflow-y: scroll;
     max-width: 1920px;
+    padding: 12px 24px 100px 24px;
 }
 
 h1 {
