--- a/frontend/vanilla-ui/room/room.css
+++ b/frontend/vanilla-ui/room/room.css
@@ -1,10 +1,4 @@
-body {
-    background-color: #F2F2F2;
-    margin: 0;
-    padding: 0;
-}
-
-.room-wrapper {
+.wrapper {
     display: flex;
     flex-direction: row;
     height: 100%;
@@ -16,10 +10,15 @@ body {
     flex: 1;
 }
 
-.example-canvas {
-    min-width: 400px;
+.example-canvas-wrapper {
+    padding: 8px 0;
     height: 100%;
-    background-color: hsl(0, 0%, 59%, 0.5);
+}
+
+.example-canvas {
+    height: 100%;
+    min-width: 400px;
+    background-color: var(--grey-half);
     border-radius: 5px;
 }
 
@@ -38,7 +37,6 @@ body {
 
 .side-view {
     padding: 8px 12px;
-    width: 250px;
     display: flex;
     flex-direction: column;
 }
@@ -47,8 +45,8 @@ body {
     margin: 4px;
     height: 132px;
     border-radius: 5px;
-    width: 100%;
-    background-color: hsl(0, 0%, 59%, 0.5);
+    width: 250px;
+    background-color: var(--grey-half);
 }
 
 .session-header {
@@ -92,11 +90,11 @@ body {
 }
 
 .fab-btn {
-    height: 50px;
-    width: 50px;
+    height: 48px;
+    width: 48px;
     border-radius: 50%;
     border: 1px solid transparent;
-    background-color: hsl(0, 0%, 59%, 0.2);
+    background-color: var(--grey-duo);
     cursor: pointer;
     transition: background-color 0.2s;
     background-repeat: no-repeat;
@@ -104,12 +102,12 @@ body {
 }
 
 .fab-btn:hover {
-    background-color: hsl(0, 0%, 59%, 0.4);;
+    background-color: var(--grey-quad);
 }
 
 .fab-btn:focus-visible {
     outline: none;
-    border: 1px solid #000;
+    border: 1px solid var(--black);
 }
 
 #record {
@@ -134,7 +132,11 @@ body {
 
 #end-call {
     background-image: url(../icons/call_end.svg) ;
-    background-color: #BB1D22;
+    background-color: var(--red);
+}
+
+#end-call:hover {
+    background-color: var(--red-dark);
 }
 
 #copy-url {
