--- a/frontend/vanilla-ui/general.css
+++ b/frontend/vanilla-ui/general.css
@@ -20,6 +20,10 @@
     --grey-half: hsl(0, 0%, 59%, 0.5);
 
     --blue:hsl(226, 100%, 62%);
+    --blue-dark: hsla(225, 99%, 57%, 0.3);
+    --blue-opac: hsl(226, 75%, 50%);
+    --blue-light: hsl(226, 100%, 62%, 0.05);
+
     --red:hsl(358, 73%, 42%);
     --red-dark:hsl(358, 73%, 38%);
 }
@@ -33,6 +37,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--white-mid);
+}
+
+img, svg {
+    user-select: none;
 }
 
 .max-width {
@@ -83,13 +91,153 @@ a:link, a:visited, a:active {
     color: var(--black);
     text-decoration: none;
     transition: color 0.2s;
-}
-
-a:hover {
-    outline: none;
-    color: var(--dark-blue);
+    border: 1px solid transparent;
+    transition: box-shadow 0.2s;
+    border-radius: 5px;
 }
 
 a:focus-visible {
-    outline: 2px solid var(--blue);
+    outline: none;
+    border: solid 1px var(--blue);
+    box-shadow: 0 0 0 2px var(--blue-dark);
+}
+
+.fab-btn {
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    background-color: var(--grey-duo);
+    cursor: pointer;
+    transition: background-color 0.2s;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.fab-btn:hover {
+    background-color: var(--grey-quad);
+}
+
+.fab-btn:focus-visible {
+    outline: none;
+    border: 1px solid var(--black);
+}
+
+.primary-btn {
+    font-size: 16px;
+    color: #fff;
+    background-color: var(--blue);
+    padding: 10px 20px;
+    width: 100%;
+    max-width: 280px;
+    border-radius: 50px;
+    border: solid 1px transparent;
+    transition: background-color 0.3s, box-shadow 0.2s;
+}
+
+.primary-btn:hover {
+    cursor: pointer;
+    background-color: var(--blue-opac);
+}
+
+.primary-btn:focus-visible {
+    border: solid 1px var(--white);
+    box-shadow: 0 0 0 2px var(--blue-dark);
+    outline: none;
+}
+
+.primary-btn:disabled {
+    color: rgb(44, 43, 60, 0.4);
+    background-color: rgb(44, 43, 60, 0.03);
+}
+
+.primary-btn:disabled:hover {
+    cursor: not-allowed;
+    background-color: rgb(44, 43, 60, 0.03);
+}
+
+.input-label {
+    color: #59586A;
+    font-size: 16px;
+    padding-bottom: 10px;
+    display: block;
+    width: 100%;
+}
+
+.input {
+    box-sizing: border-box;
+    caret-color: hsl(0, 0%, 0%, 0.5);
+    background: var(--white);
+    border: solid 1px hsl(0, 0%, 0%, 0.2);
+    border-radius: 6px;
+    color: hsl(0, 0%, 0%, 0.5);
+    font-size: 16px;
+    font-weight: 500;
+    padding: 14px 16px;
+    width: 100%;
+    transition: border 0.2s, box-shadow 0.2s;
+}
+
+.input:hover {
+    border: solid 1px var(--blue);
+}
+
+.input:focus-visible {
+    outline: none;
+    border: solid 1px var(--blue);
+    box-shadow: 0 0 0 2px var(--blue-dark);
+}
+
+.input:invalid {
+    border: solid 1px var(--red);
+}
+
+.input:invalid:focus {
+    box-shadow: 0 0 0 2px var(--red-dark);
+}
+
+.card {
+    margin: 50px auto;
+    background-color: var(--white-darkest);
+    border-radius: 20px;
+    padding: 40px 24px;
+    max-width: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+}
+
+.card div {
+    width: 100%;
+}
+
+.card button {
+    margin-bottom: 20px;
+}
+
+.card h3 {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.recording-none {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.recording-none p {
+    margin-bottom: 15px;
+}
+
+.recording-none h4 {
+    margin-bottom: 5px;
+}
+
+.recording-none img {
+    width: 200px;
+    height: 200px;
 }
