--- a/frontend/vanilla-ui/landing/landing.css
+++ b/frontend/vanilla-ui/landing/landing.css
@@ -68,7 +68,7 @@ body {
     flex-direction: row;
 }
 
-.card {
+.display-card {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -90,17 +90,17 @@ body {
     background-image: linear-gradient(hsl(49, 100%, 50%, 0.4), hsl(35, 93%, 49%, 0.4));
 }
 
-.card img {
+.display-card img {
     margin: auto;
     height: 200px;
     width: 200px;
 }
 
-.card h2, .long-card h2 {
+.display-card h2, .long-card h2 {
     margin-bottom: 10px;
 }
 
-.card p {
+.display-card p {
     margin-bottom: 60px;
 }
 
@@ -145,7 +145,7 @@ body {
 }
 
 @media only screen and (max-width: 1070px) and (min-width: 920px){
-    .card {
+    .display-card {
         max-width: 280px;
     }
 }
@@ -173,7 +173,7 @@ body {
         margin-top: -5px;
     }
 
-    .card {
+    .display-card {
         max-width: 100%;
     }
 
