--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,19 +2,33 @@
 
 * {
   font-family: "Inter", Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 :root {
-  --blue: #3c68ff;
-  --white: #fff;
-  --light-grey: #fdfdfd;
-  --grey: #f5f5f5;
-  --mid-grey: #f2f2f2;
-  --dark-blue: #2c2b3c;
-  --black: #000;
+  color-scheme: light;
+  --white: hsl(0, 0%, 100%);
+  --white-mid: hsl(0, 0%, 99%); /* light grey */
+  --white-dark: hsl(0, 0%, 96%); /* grey */
+  --white-darkest: hsl(0, 0%, 95%); /* mid-grey */
+  --dark-blue: hsl(244, 17%, 20%);
+
+  --black: hsl(0, 0%, 0%);
+  --black-opac: hsla(0, 0%, 0%, 0.8);
+
+  --grey-duo: hsl(0, 0%, 59%, 0.2);
+  --grey-quad: hsl(0, 0%, 59%, 0.4);
+  --grey-half: hsl(0, 0%, 59%, 0.5);
+
+  --blue: hsl(226, 100%, 62%);
+  --blue-dark: hsla(225, 99%, 57%, 0.3);
+  --blue-opac: hsl(226, 75%, 50%);
+  --blue-light: hsl(226, 100%, 62%, 0.05);
+
+  --red: hsl(358, 73%, 42%);
+  --red-dark: hsl(358, 73%, 38%);
 }
 
 html,
@@ -24,50 +38,48 @@ body,
 }
 
 body {
-  /* overflow-y: scroll; */
-  margin: 0;
-  padding: 12px 24px 100px 24px;
-  background-color: var(--light-grey);
+  background-color: var(--white-mid);
+}
+
+img,
+svg {
+  user-select: none;
 }
 
 .max-width {
   max-width: 1920px;
+  overflow-y: scroll;
+  height: 100%;
 }
 
 h1 {
   color: var(--black);
-  margin: 0;
   font-size: 60px;
 }
 
 h2 {
   color: var(--black);
-  margin: 0;
   font-size: 30px;
 }
 
 h3 {
   color: var(--black);
-  margin: 0;
   font-size: 24px;
 }
 
 h4 {
   color: var(--black);
-  margin: 0;
   font-size: 18px;
 }
 
 h5 {
   color: var(--black);
-  margin: 0;
   font-size: 16px;
   font-weight: 500;
 }
 
 p {
   color: var(--black);
-  margin: 0;
   font-size: 14px;
   font-weight: 500;
 }
@@ -78,16 +90,37 @@ a:active {
   cursor: pointer;
   color: var(--black);
   text-decoration: none;
-  transition: all 0.2s;
-}
-
-a:hover {
-  outline: none;
-  color: var(--dark-blue);
+  transition: color 0.2s;
+  border: 1px solid transparent;
+  transition: box-shadow 0.2s;
+  border-radius: 5px;
 }
 
 a:focus-visible {
-  outline: 2px solid var(--blue);
+  outline: none;
+  border: solid 1px var(--blue);
+  box-shadow: 0 0 0 2px var(--blue-dark);
+}
+
+.fab-btn {
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  background-color: var(--grey-duo);
+  cursor: pointer;
+  transition: background-color 0.2s;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.fab-btn:hover {
+  background-color: var(--grey-quad);
+}
+
+.fab-btn:focus-visible {
+  outline: none;
+  border: 1px solid var(--black);
 }
 
 .primary-btn {
@@ -95,7 +128,8 @@ a:focus-visible {
   color: #fff;
   background-color: var(--blue);
   padding: 10px 20px;
-  width: 280px;
+  width: 100%;
+  max-width: 280px;
   border-radius: 50px;
   border: solid 1px transparent;
   transition: background-color 0.3s, box-shadow 0.2s;
@@ -103,12 +137,12 @@ a:focus-visible {
 
 .primary-btn:hover {
   cursor: pointer;
-  background-color: rgb(26, 115, 232, 0.95);
+  background-color: var(--blue-opac);
 }
 
 .primary-btn:focus-visible {
-  border: solid 1px #1a73e8;
-  box-shadow: 0 0 0 2px rgba(39, 94, 254, 0.3);
+  border: solid 1px var(--white);
+  box-shadow: 0 0 0 2px var(--blue-dark);
   outline: none;
 }
 
@@ -145,45 +179,68 @@ a:focus-visible {
 }
 
 .input:hover {
-  border: solid 1px #1a73e8;
+  border: solid 1px var(--blue);
 }
 
 .input:focus-visible {
   outline: none;
-  border: solid 1px #1a73e8;
-  box-shadow: 0 0 0 2px rgba(39, 94, 254, 0.3);
+  border: solid 1px var(--blue);
+  box-shadow: 0 0 0 2px var(--blue-dark);
 }
 
 .input:invalid {
-  border: solid 1px rgb(232, 26, 26);
+  border: solid 1px var(--red);
 }
 
 .input:invalid:focus {
-  box-shadow: 0 0 0 2px rgba(232, 39, 39, 0.3);
+  box-shadow: 0 0 0 2px var(--red-dark);
 }
 
-.dialog {
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.card {
   margin: 50px auto;
-  background-color: var(--mid-grey);
+  background-color: var(--white-darkest);
   border-radius: 20px;
   padding: 40px 24px;
   max-width: 380px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 30px;
+  gap: 45px;
 }
 
-.dialog div {
+.card div {
   width: 100%;
 }
 
-.dialog button {
+.card button {
   margin-bottom: 20px;
 }
 
-.dialog h3 {
-  text-align: left;
-  margin-bottom: 20px;
+.card img {
+  width: 200px;
+  height: 200px;
 }
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+  }
+
+  body {
+    --white-mid: #2a2a2a;
+    --black: #ffffff;
+    --white-darkest: var(--grey-half);
+    --white-dark: var(--grey-quad);
+    color: var(--white);
+  }
+
+  svg {
+    fill: var(--white);
+  }
+} */
