Fix end call button color

--- a/frontend/src/routes/session/room/room.module.css
+++ b/frontend/src/routes/session/room/room.module.css
@@ -137,11 +137,11 @@
   margin-bottom: 6px;
 }
 
-.endCall {
+button.endCall {
   background-color: var(--red);
 }
 
-.endCall:hover {
+button.endCall:hover {
   background-color: var(--red-dark);
 }
 
